[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/level/tile_535.png" type="Texture" id=1]
[ext_resource path="res://levels/props/Computer.gd" type="Script" id=2]
[ext_resource path="res://interface/ComputerMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/lightmaps/improved_lightmap.png" type="Texture" id=4]
[ext_resource path="res://interface/ui_theme.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 24 )

[node name="Computer" type="Node2D"]
script = ExtResource( 2 )
lock_group = "A-1"

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite"]
position = Vector2( -1.04907e-06, -24 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( 0.0117798, -22.5608 )
rotation = -1.5708
scale = Vector2( 0.03, 0.28 )
texture = ExtResource( 4 )
offset = Vector2( 270, 0 )
color = Color( 0.831373, 0.984314, 0.913725, 1 )
energy = 1.13
shadow_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ComputerMenu" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="Control" type="Node2D" parent="."]
z_index = 6

[node name="GroupName" type="Label" parent="Control"]
margin_left = -74.5326
margin_top = -14.6104
margin_right = 5.46737
margin_bottom = 12.3896
theme = ExtResource( 5 )
text = "TEST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="." method="_on_Area2D_body_exited"]
